--- a/AWS_Marketplace.ipynb
+++ b/AWS_Marketplace.ipynb
@@ -16,7 +16,7 @@
     "1. Please read the contents of this notebook carefully to run CCAI successfully\n",
     "2. Ensure that the user has the all permissions to run Sagemaker\n",
     "3. Ensure that user has all permissions to read/write/edit/copy S3 buckets\n",
-    "4. Some hands-on experience using Amazon SageMaker\n",
+    "4. Some hands-on experience using Amazon SageMaker is required\n",
     "5. Conversation audio files must be transcribed to text using AWS Transcribe\n",
     "6. To use CCAI successfully, ensure your IAM role has these three permissions and you have authority to make AWS Marketplace subscriptions in the AWS account used:\n",
     "    * aws-marketplace:ViewSubscriptions\n",
